--- a/admin-vip-generator.html
+++ b/admin-vip-generator.html
@@ -3,99 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>?? Generador VIP - Games Hot (PRIVADO)</title>
+  <title>🔐 Generador VIP - Games Hot (PRIVADO)</title>
+  <link rel="icon" href="https://i.ibb.co/S4L9STLS/may-bnner.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      background: #0f0f0f;
+      background: #0d0d0d;
       color: #f0f0f0;
       font-family: 'Segoe UI', sans-serif;
       padding: 40px;
     }
+
     .container {
-      max-width: 600px;
+      max-width: 650px;
       margin: 0 auto;
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 51, 102, 0.3);
+      background: #161616;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(255, 51, 102, 0.3);
     }
+
     h1 {
       color: #ff3366;
       text-align: center;
       margin-bottom: 25px;
+      font-size: 28px;
     }
+
+    .warning {
+      background: #222;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 25px;
+      border-left: 3px solid #ffcc00;
+      color: #ffcc00;
+      font-size: 0.95em;
+    }
+
     label {
       display: block;
-      margin: 15px 0 8px;
-      font-weight: bold;
+      margin: 20px 0 10px;
+      font-weight: 600;
+      color: #ccc;
     }
+
     input {
       width: 100%;
-      padding: 12px;
-      background: #2a2a2a;
-      border: 1px solid #444;
-      border-radius: 6px;
+      padding: 14px;
+      background: #222;
+      border: 1px solid #333;
+      border-radius: 10px;
       color: white;
       font-size: 16px;
       margin-bottom: 15px;
     }
+
     button {
-      background: #ff3366;
+      background: linear-gradient(135deg, #ff3366, #ff6699);
       color: white;
-      padding: 14px;
+      padding: 16px;
       width: 100%;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 18px;
       font-weight: bold;
       cursor: pointer;
       transition: opacity 0.2s;
     }
+
     button:hover {
       opacity: 0.9;
     }
+
     #result {
-      margin-top: 25px;
-      padding: 15px;
-      background: #252525;
-      border-radius: 8px;
+      margin-top: 30px;
+      padding: 20px;
+      background: #1e1e1e;
+      border-radius: 12px;
       word-break: break-all;
+      border: 1px solid #333;
     }
+
     #result a {
       color: #4d79ff;
       text-decoration: none;
     }
+
     #result a:hover {
       text-decoration: underline;
     }
-    .warning {
+
+    .copy-btn {
+      margin-top: 15px;
+      padding: 10px;
       background: #333;
-      padding: 15px;
-      border-radius: 8px;
-      margin-top: 20px;
-      font-size: 0.9em;
-      color: #ffc439;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>?? Generador de Enlaces VIP</h1>
-    <p>Usa esta herramienta solo tú. ¡Nunca la compartas!</p>
+    <h1>🔐 Generador de Enlaces VIP</h1>
+    
+    <div class="warning">
+      <strong>⚠️ USO EXCLUSIVO DEL ADMINISTRADOR</strong><br>
+      Nunca compartas este archivo ni su enlace. Guárdalo en una ubicación secreta.
+    </div>
 
     <label for="email">Correo del donante:</label>
     <input type="email" id="email" placeholder="ejemplo@gmail.com" required>
 
     <button onclick="generarEnlace()">Generar enlace VIP</button>
 
-    <div id="result"></div>
-
-    <div class="warning">
-      <strong>?? Instrucciones:</strong><br>
-      1. Copia el enlace generado.<br>
-      2. Envíalo por correo al donante.<br>
-      3. El enlace activará su acceso VIP automáticamente.
-    </div>
+    <div id="result" style="display:none;"></div>
   </div>
 
   <script>
@@ -117,22 +146,24 @@
 
       const token = generarToken();
       const dominio = window.location.origin;
-      const enlace = `${{dominio}}/vip-access.html?email=${{encodeURIComponent(email)}}&token=${{token}}`;
+      const enlace = `${dominio}/vip-access.html?email=${encodeURIComponent(email)}&token=${token}`;
 
       const resultDiv = document.getElementById('result');
       resultDiv.innerHTML = `
-        <strong>? Enlace generado:</strong><br>
-        <a href="${{enlace}}" target="_blank">${{enlace}}</a>
+        <strong>✅ Enlace generado:</strong><br>
+        <a href="${enlace}" target="_blank">${enlace}</a>
         <br><br>
-        <button onclick="copiarEnlace('${{enlace}}')">Copiar al portapapeles</button>
+        <button class="copy-btn" onclick="copiarEnlace('${enlace}')">
+          <i class="fas fa-copy"></i> Copiar al portapapeles
+        </button>
       `;
+      resultDiv.style.display = 'block';
     }
 
     function copiarEnlace(enlace) {
       navigator.clipboard.writeText(enlace).then(() => {
         alert('¡Enlace copiado al portapapeles!');
       }).catch(err => {
-        console.error('Error al copiar:', err);
         prompt('Copia manualmente:', enlace);
       });
     }
