--- a/vip.html
+++ b/vip.html
@@ -4,90 +4,183 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Acceso VIP - Games Hot</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="https://i.ibb.co/S4L9STLS/may-bnner.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    .vip-container {
-      max-width: 600px;
-      margin: 40px auto;
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
+
+    :root {
+      --bg-dark: #0d0d0d;
+      --bg-card: #161616;
+      --text-light: #f0f0f0;
+      --accent: #ff3366;
+      --sidebar-width: 250px;
+    }
+
+    body {
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      display: flex;
+    }
+
+    .sidebar {
+      width: var(--sidebar-width);
+      background: #0a0a0a;
+      height: 100vh;
+      padding: 20px 0;
+      position: fixed;
+      left: 0;
+      top: 0;
+      border-right: 1px solid #222;
+    }
+
+    .logo {
+      text-align: center;
+      padding: 0 15px 20px;
+      border-bottom: 1px solid #222;
+      margin-bottom: 20px;
+    }
+
+    .logo img {
+      height: 50px;
+      filter: drop-shadow(0 0 6px rgba(255, 51, 102, 0.3));
+    }
+
+    .btn {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px 20px;
+      color: var(--text-light);
+      text-decoration: none;
+      border-radius: 8px;
+    }
+
+    .main-content {
+      flex: 1;
+      margin-left: var(--sidebar-width);
+      padding: 30px;
+    }
+
+    .vip-container {
+      max-width: 650px;
+      margin: 40px auto;
+      background: var(--bg-card);
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+    }
+
     .vip-container h1 {
       text-align: center;
-      margin-bottom: 20px;
-      color: #ff3366;
+      margin-bottom: 25px;
+      color: var(--accent);
+      font-size: 32px;
     }
+
     .vip-container p {
       margin-bottom: 20px;
-      line-height: 1.6;
+      line-height: 1.7;
+      color: #ddd;
     }
+
     .benefits {
-      background: #252525;
-      padding: 15px;
-      border-radius: 8px;
-      margin: 20px 0;
+      background: #1e1e1e;
+      padding: 20px;
+      border-radius: 12px;
+      margin: 25px 0;
+      border-left: 3px solid var(--accent);
     }
+
     .benefits ul {
       padding-left: 20px;
+      margin-top: 10px;
     }
+
     .benefits li {
-      margin: 8px 0;
+      margin: 10px 0;
+      color: #ccc;
     }
+
     .paypal-form {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 18px;
+      margin-top: 20px;
     }
+
+    .paypal-form label {
+      font-weight: 600;
+      color: #aaa;
+    }
+
     .paypal-form input {
-      padding: 12px;
-      background: #2a2a2a;
-      border: 1px solid #444;
-      border-radius: 6px;
+      padding: 14px;
+      background: #222;
+      border: 1px solid #333;
+      border-radius: 10px;
       color: white;
       font-size: 16px;
     }
-    .paypal-form input:focus {
-      outline: none;
-      border-color: #ff3366;
-    }
+
     .paypal-button {
-      background: #ffc439;
+      background: linear-gradient(135deg, #ffc439, #ff9800);
       color: #000;
-      padding: 14px;
+      padding: 16px;
       font-size: 18px;
       font-weight: bold;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
       transition: opacity 0.2s;
+      margin-top: 10px;
     }
+
     .paypal-button:hover {
       opacity: 0.9;
     }
+
     .note {
       font-size: 0.9em;
-      color: #aaa;
-      margin-top: 10px;
+      color: #888;
+      margin-top: 15px;
+      text-align: center;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 70px;
+      }
+      .logo img {
+        height: 40px;
+      }
+      .sidebar .btn span:not(.fas):not(.fab) {
+        display: none;
+      }
+      .main-content {
+        margin-left: 70px;
+        padding: 15px;
+      }
+      .vip-container {
+        padding: 25px;
+      }
     }
   </style>
 </head>
 <body>
-
   <aside class="sidebar">
-    <div class="logo"><h2>?? Games Hot</h2></div>
+    <div class="logo">
+      <img src="https://i.ibb.co/S4L9STLS/may-bnner.png" alt="Games Hot">
+    </div>
     <nav>
-      <ul>
-        <li><a href="index.html" class="btn"><i class="fas fa-home"></i> INICIO</a></li>
-        <li class="section-title">REDES</li>
-        <li><a href="https://t.me/+oKZkJEE6EhYzZGMx" target="_blank" class="btn social"><i class="fab fa-telegram"></i> Telegram</a></li>
-        <li><a href="https://discord.gg/pzjjTbkc" target="_blank" class="btn social"><i class="fab fa-discord"></i> Discord</a></li>
-        <li class="section-title">OTROS</li>
-        <li><a href="tutoriales.html" class="btn"><i class="fas fa-book"></i> TUTORIALES</a></li>
-        <li><a href="contacto.html" class="btn"><i class="fas fa-envelope"></i> CONTACTO</a></li>
-      </ul>
+      <a href="index.html" class="btn"><i class="fas fa-home"></i> <span>INICIO</span></a>
+      <a href="https://t.me/tu_canal" target="_blank" class="btn"><i class="fab fa-telegram"></i> <span>Telegram</span></a>
+      <a href="https://discord.gg/tu-invite" target="_blank" class="btn"><i class="fab fa-discord"></i> <span>Discord</span></a>
     </nav>
   </aside>
 
@@ -97,15 +190,16 @@
       
       <p>
         Al donar, obtienes acceso inmediato a <strong>descargas directas sin acortadores</strong> en todos los juegos.
-        Tu apoyo nos permite mantener la web activa y subir más contenido.
+        Tu apoyo nos permite mantener la web activa y subir más contenido de calidad.
       </p>
 
       <div class="benefits">
-        <strong>? Beneficios VIP:</strong>
+        <strong>✅ Beneficios VIP:</strong>
         <ul>
           <li>Enlaces de descarga directos (sin publicidad ni esperas)</li>
           <li>Acceso de por vida con un solo pago</li>
           <li>Soporte prioritario vía Discord</li>
+          <li>Actualizaciones exclusivas</li>
         </ul>
       </div>
 
@@ -114,7 +208,7 @@
         <input type="hidden" name="cmd" value="_donations">
         <input type="hidden" name="item_name" value="Acceso VIP - Games Hot">
         <input type="hidden" name="currency_code" value="USD">
-        <input type="hidden" name="return" value="https://tudominio.com/gracias.html">
+        <input type="hidden" name="return" value="https://tu-usuario.github.io/gracias.html">
 
         <label for="email">Tu correo electrónico (para enviarte tu acceso):</label>
         <input type="email" id="email" name="email" required placeholder="ejemplo@gmail.com">
@@ -132,6 +226,5 @@
       </form>
     </div>
   </main>
-
 </body>
 </html>
